contributors that suggested a given feature are shown in []. Thanks!


Verilator 4.201 devel
==========================

**Minor:**

* Add EOFNEWLINE warning when missing a newline at EOF.
* Changed TIMESCALEMOD from error into a warning.
* Verilated signals now use VlWide and VlPacked in place of C arrays.
* Mark --no-relative-cfuncs as scheduled for deprecation.
* Add VerilatedCovContext::forcePerInstance (#2793). [Kevin Laeufer]
* Fix class unpacked-array compile error (#2774). [Iru Cai]
* Fix exceeding command-line ar limit (#2834). [Yinan Xu]
* Fix false $dumpfile warning on model save (#2834). [Yinan Xu]
* Fix --timescale-override not suppressing TIMESCALEMOD (#2838). [Kaleb Barrett]
* Fix false TIMESCALEMOD on generate-ignored instances (#2838). [Kaleb Barrett]
* Fix --output-split with class extends (#2839). [Iru Cai]
* Fix false WIDTHCONCAT on casted constant (#2849). [Rupert Swarbrick]
* Fix --public-flat-rw / DPI issue (#2858). [Todd Strader]
* Fix interface localparam access (#2859). [Todd Strader]
* Fix Cygwin example compile issues (#2856). [Mark Shaw]


Verilator 4.200 2021-03-12
==========================

**Announcement:**

* --inhibit-sim is planned for deprecation, file a bug if this is still being used.

**Major:**

* Add simulation context (VerilatedContext) to allow multiple fully independent
  models to be in the same process. Please see the updated examples. (#2660)
* Add context->time() and context->timeInc() API calls, to set simulation time.
  These now are recommended in place of the legacy sc_time_stamp().

**Minor:**

* Converted Asciidoc documentation into reStructuredText (RST) format.
* Fix range inheritance on port without data type (#2753). [Embedded Go]
* Fix slice-assign overflow (#2803) (#2811). [David Turner]
* Fix interface array connection ordering broken in v4.110 (#2827). [Don Owen]
* Fix or-reduction on different scopes broken in 4.110 (#2828). [Yinan Xu]
* Fix MSVC++ compile error. (#2831) (#2833) [Drew Taussig]

