@@ -62,7 +62,7 @@ module t (/*AUTOARG*/
 
    reg [1:0]  memory[121:110];
 
-   reg [1023:0] largeish;
+   wire [1023:0] largeish = {992'h0, cyc};
    // CHECK_COVER_MISSING(-1)
 
    always @ (posedge clk) begin
